<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context=".views.LoginScreen">

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/top_login_card_view_rounded_corners">

            <ImageView
                android:id="@+id/loginImg"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="50dp"
                android:layout_weight="0"
                android:src="@drawable/login_user" />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/loginCardView">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="70dp"
                android:layout_marginVertical="10dp"
                android:layout_toStartOf="@+id/logInTextView"
                android:onClick="navToSetting"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/logInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_text"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cardBoxCreRelative"
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:layout_below="@+id/loginText"
            android:layout_marginTop="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:background="@android:color/white"
                android:elevation="25dp"
                app:cardCornerRadius="17dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

<!--                    <com.google.android.material.textfield.TextInputLayout-->
<!--                        android:id="@+id/txUserLayout"-->
<!--                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_alignParentStart="true"-->
<!--                        android:layout_alignParentTop="true"-->
<!--                        android:layout_alignParentEnd="true"-->
<!--                        android:layout_centerInParent="true"-->
<!--                        android:layout_marginStart="15dp"-->
<!--                        android:layout_marginTop="15dp"-->
<!--                        android:layout_marginEnd="15dp"-->
<!--                        android:hint="@string/enter_your_name"-->
<!--                        android:textSize="13sp"-->
<!--                        app:boxBackgroundMode="outline"-->
<!--                        app:boxBackgroundColor="@color/colorAccent">-->

<!--                        <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:id="@+id/userNameEditText"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="50dp" />-->
<!--                    </com.google.android.material.textfield.TextInputLayout>-->

<!--                    <com.google.android.material.textfield.TextInputLayout-->
<!--                        android:id="@+id/txPwdLayout"-->
<!--                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@+id/txUserLayout"-->
<!--                        android:layout_alignParentStart="true"-->
<!--                        android:layout_alignParentEnd="true"-->
<!--                        android:layout_alignParentBottom="true"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginStart="15dp"-->
<!--                        android:layout_marginEnd="15dp"-->
<!--                        android:layout_marginBottom="130dp"-->
<!--                        android:hint="@string/enter_your_password"-->
<!--                        android:inputType="textPassword"-->
<!--                        android:textColor="@color/colorPrimary"-->
<!--                        android:textSize="13sp"-->
<!--                        app:boxBackgroundMode="outline"-->
<!--                        app:endIconMode="password_toggle"-->
<!--                        app:endIconCheckable="true"-->
<!--                        app:boxBackgroundColor="@color/colorAccent">-->

<!--                        <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="50dp"-->
<!--                            android:id="@+id/passwordEditText"-->
<!--                            />-->
<!--                    </com.google.android.material.textfield.TextInputLayout>-->

                                        <EditText
                                            android:id="@+id/userNameEditText"
                                            android:layout_width="230dp"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentStart="true"
                                            android:layout_alignParentTop="true"
                                            android:layout_alignParentEnd="true"
                                            android:layout_centerInParent="true"
                                            android:layout_marginStart="45dp"
                                            android:layout_marginTop="45dp"
                                            android:layout_marginEnd="45dp"
                                            android:layout_marginBottom="10dp"
                                            android:hint="@string/enter_your_name"
                                            android:textColor="@color/colorPrimary"
                                            android:textAlignment="center"
                                            android:textSize="13sp" />

                                        <EditText
                                            android:id="@+id/passwordEditText"
                                            android:layout_width="230dp"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentStart="true"
                                            android:layout_alignParentEnd="true"
                                            android:layout_alignParentBottom="true"
                                            android:layout_centerInParent="true"
                                            android:layout_marginStart="48dp"
                                            android:layout_marginEnd="42dp"
                                            android:layout_marginBottom="151dp"
                                            android:hint="@string/enter_your_password"
                                            android:textColor="@color/colorPrimary"
                                            android:inputType="textPassword"
                                            android:textAlignment="center"
                                            android:textSize="13sp" />

                    <CheckBox
                        android:id="@+id/rememberMeCheckBox"
                        android:layout_width="230dp"
                        android:layout_height="42dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="59dp"
                        android:layout_marginEnd="45dp"
                        android:layout_marginBottom="93dp"
                        android:checked="true"
                        android:layoutDirection="ltr"
                        android:text="@string/remember_me"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/userLoginButton"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="45dp"
                        android:layout_marginBottom="29dp"
                        android:background="@drawable/rounded_corner_accent_color"
                        android:text="@string/login_user"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="250dp"-->
        <!--            android:layout_below="@id/cardBoxCreRelative"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            >-->

        <!--            <androidx.cardview.widget.CardView-->
        <!--                android:id="@+id/bottomLoginCardView"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="250dp"-->
        <!--                android:background="@android:color/white"-->

        <!--                >-->
        <!--<TextView-->
        <!--    android:layout_width="wrap_content"-->
        <!--    android:layout_height="wrap_content"-->
        <!--    android:text="LoginRepo User"-->
        <!--    android:textSize="35dp"-->
        <!--    android:textColor="@color/colorAccent"-->
        <!--    android:layout_gravity="top|center"-->
        <!--    />-->


        <!--            </androidx.cardview.widget.CardView>-->
        <!--        </RelativeLayout>-->


    </RelativeLayout>
</ScrollView>